# SynapseEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh
ai_engine/: CMakeLists.txt
ai_engine/includes/data/: csv.hpp  json.hpp  synj.hpp
ai_engine/src/: main.cc
ai_engine/src/data/: csv.cc  json.cc  synj.cc
cmake/: AddScriptTests.cmake  AddZig.cmake  CopyMathHeader.cmake
csv_parser/: CMakeLists.txt  build.zig  build.zig.zon
csv_parser/includes/: csv.h
csv_parser/src/: csv.zig  error.zig  parser.zig  root.zig
json_parser/: CMakeLists.txt  build.zig  build.zig.zon
json_parser/includes/: json.h
json_parser/src/: error.zig  json.zig  parser.zig  root.zig
scripts/: check_dependencies.pl  cloc.sh  verify_dependencies.sh  verify_files.py  verify_tool_versions.py
synapse_math/: Cargo.toml
synapse_math/include/math/: synapse_math.h  synapse_math_input.h
synapse_math/src/: error.rs  lib.rs  rand.rs
synapse_math/src/ffi/: math_input.rs  mod.rs
synapse_math/src/linear_algebra/: activation.rs  gradient.rs  loss.rs  mod.rs
synapse_math/src/math/: elem.rs  matrix.rs  mod.rs  scalar.rs  vector.rs
synapse_math/src/models/: linear_regression.rs  mod.rs  model.rs
synapse_math/src/solver/: mod.rs  solver.rs  solver_utils.rs
synapse_math/src/stats/: mod.rs  stats.rs
synj_parser/: CMakeLists.txt  build.zig  build.zig.zon
synj_parser/includes/: synj.h
synj_parser/src/: error.zig  helper.zig  lexer.zig  node.zig  parser.zig  root.zig  synj.zig  test_tokenizer.zig  test_validator.zig  tokenizer.zig  validator.zig
synj_parser/tests/: test_parser.zig  test_tokenizer.zig
tests/: config.synj  ctf_config.synj  model.json  test.csv
